# eventum-studio

./: README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
eventum_studio/: 01_Time_distribution.py  __main__.py
eventum_studio/components/: component.py  sample_explorer.py  span_input.py  template_configuration_editor.py  template_editor.py  template_manager.py  template_renderer.py  template_state_viewer.py  time_pattern_configurator.py  time_pattern_configurator_list.py  time_pattern_distribution_histogram.py
eventum_studio/pages/: 02_Event_template.py
eventum_studio/utils/: relative_time.py
eventum_studio/utils/tests/: test_relative_time.py
