[tool.poetry]
name = "eventum-studio"
version = "1.0.8"
description = "Content designer for Eventum "
license = "Apache-2.0"
authors = ["Nikita Reznikov <nikita.reznikov.public@mail.ru>"]
readme = "README.md"
repository = "https://github.com/Eventum-Generatives/EventumStudio"
documentation = "https://eventum-generatives.github.io/Website/"
keywords = ["content", "IDE", "template", "visualization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
packages = [
    {include = "eventum_studio"},
    {include = "eventum_studio/py.typed"},
    {include = "eventum_studio/static/favicon.ico"}
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.2"
streamlit = "==1.28.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
plotly = "^5.20.0"
streamlit-elements = "^0.1.0"
eventum-content-manager = "^1.0.5"
eventum-plugins = "^1.0.1"
pytz = "^2024.1"
tzlocal = "^5.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mypy = "^1.9.0"
pandas-stubs = "^2.2.1.240316"
pytest = "^8.2.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eventum-studio = "eventum_studio.__main__:main"
